# Cogent

./: CMakeLists.txt  README.md
include/: Cogent.h
lib/: CMakeLists.txt  Cogent.cpp  CogentAnalysis.cpp
testing/: matrix.ll
tool/: CMakeLists.txt  Main.cpp
